@@ -9,6 +9,7 @@ Changes in version 3.1.0:
 * Issue 21: luke tarball needs to extract to a "luke" directory (bevan.koopman, 
   Photodeus)
 * Issue 33: Term Positions increment incorrect (karolina.bernat)
+* Issue 27: Cannot add or edit documents using StandardAnalyzer (dean.thrasher)
 
 ---------------------------------------------------------------------------
   Changes in v. 1.0.1 (released on 2010.04.01):
